# sfear

./: README.rst  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
licenses/: LICENSE.rst
