[metadata]
name = sfear
author = Brett Morris
author_email = morrisbrettm@gmail.com
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/bmorris3/sfear
description = Map a world
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires = 
   numpy

[options.extras_require]
all =
    matplotlib>3.6
    astropy>5.2
    astroquery
    cartopy>=0.21.1
    descartes>=1.1
    geopandas>=0.9
    geoplot>=0.5
    mpl_toolkits
    shapely>=1.8.4
test =
    pytest
    pytest-doctestplus
    pytest-cov
docs =
    sphinx
    sphinx-automodapi
    scipy
    sphinx-book-theme>=0.3.3
    numpydoc

[tool:pytest]
testpaths = "sfear" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
  sfear/__init*
  sfear/conftest.py
  sfear/*setup_package*
  sfear/tests/*
  sfear/*/tests/*
  sfear/extern/*
  sfear/version*
  */sfear/__init*
  */sfear/conftest.py
  */sfear/*setup_package*
  */sfear/tests/*
  */sfear/*/tests/*
  */sfear/extern/*
  */sfear/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
